[gd_scene load_steps=3 format=3 uid="uid://bohjkes7vx3xg"]

[ext_resource type="PackedScene" uid="uid://doxmi7qgcnmbk" path="res://Scenes/Party/overworld_player.tscn" id="1_8ewt7"]
[ext_resource type="Script" path="res://Scripts/Areas/Act2/ending.gd" id="1_jap58"]

[node name="Ending" type="Node2D"]
script = ExtResource("1_jap58")

[node name="Player" parent="." instance=ExtResource("1_8ewt7")]
position = Vector2(562, 354)
scale = Vector2(1.5, 1.5)

[node name="PreCutscene" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="EndTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[connection signal="timeout" from="PreCutscene" to="." method="_on_pre_cutscene_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_end_timer_timeout"]
